--- a/aptv.conf
+++ b/aptv.conf
@@ -18,35 +18,24 @@ interface-mode = auto
 [Proxy]
 
 [Remote Proxy]
-509fc146b771a28f = https://733833.xyz/api/v1/client/subscribe?token=7f7c21878c009748d172bba157ef314c,udp=true,fast-open=default,vmess-aead=true,skip-cert-verify=true,enabled=true,flexible-sni=true
+TNB = https://733833.xyz/api/v1/client/subscribe?token=7f7c21878c009748d172bba157ef314c,udp=true,fast-open=default,vmess-aead=true,skip-cert-verify=true,enabled=true,flexible-sni=true
+LyreBird = http://38.59.246.49:38295/api/v1/client/subscribe?token=650694274299c864ab284f8b028ba907,udp=true,fast-open=default,vmess-aead=true,skip-cert-verify=true,enabled=true,flexible-sni=true
 
 [Proxy Chain]
 
 [Proxy Group]
 Available = select,ALL_Filter,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Available.png
-YouTube = select,Available,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
-Telegram = select,Available,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
-HK = fallback,HK_Filter,interval = 600,max-timeout = 3000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
-TW = select,TW_Filter,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
-SG = select,SG_Filter,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
-JP = select,JP_Filter,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
-KR = select,KR_Filter,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
-US = select,US_Filter,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+机场更新 = url-test,LyreBird,interval = 600
 
 [Remote Filter]
-ALL_Filter = NameRegex, FilterKey = ".*"
-HK_Filter = NameRegex, FilterKey = "(?i)(港|HK|Hong)"
-TW_Filter = NameRegex, FilterKey = "(?i)(台|TW|Tai)"
-JP_Filter = NameRegex, FilterKey = "(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)"
-KR_Filter = NameRegex, FilterKey = "(?i)(KR|Korea|KOR|首尔|韩|韓)"
-US_Filter = NameRegex, FilterKey = "(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)"
-SG_Filter = NameRegex, FilterKey = "(?i)(新加坡|坡|狮城|SG|Singapore)"
+ALL_Filter = NameRegex,TNB, FilterKey = ".*"
 
 [Rule]
 DOMAIN-SUFFIX,zox.show,Available
 DOMAIN-SUFFIX,embymv.link,Available
 DOMAIN-SUFFIX,581658.best,Available
 DOMAIN-SUFFIX,7777777.buzz,Available
+DOMAIN-SUFFIX,733833.xyz,机场更新
 #Type:DOMAIN-SUFFIX,DOMAIN,DOMAIN-KEYWORD,USER-AGENT,URL-REGEX,IP-CIDR
 #Strategy:DIRECT,PROXY,REJECT
 #Options:no-resolve(only for IP-CIDR,IP-CIDR2,GEOIP,IP-ASN)
